# settlex

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  AGENTS.md  Dockerfile.game  Dockerfile.web  TODOS.txt  blog.md  next.config.js  notes.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  questions.txt  resources  spec.txt  stock-footage-thinking-bubble-or-dynamic-fast-thought-bubble-animation.webm  structure.txt  tailwind.config.js  trim_2s_from_5p3.webm  tsconfig.json  vectorizer_extractor.user.js  vitest.config.ts
.codex/: hooks.json
ai/: resources
ai/pufferlib/: README.md  (+3 more)
ai/pufferlib/python/: pyproject.toml
ai/pufferlib/python/settlex_puffer/: __init__.py  bridge.py  env.py  eval_curve.py  evaluate.py  infer_server.py  plot_curve.py  policy.py  policy_factorized.py  smoke.py  train.py
ai/pufferlib/python/tests/: test_policy_factorized.py
app/: globals.css  layout.js  page.js
design/: TILE_DESIGN.md
docs/: INDEX.md  mvp-compromises.md
game-core/: AGENTS.md  package.json  tsconfig.json
infra/: Caddyfile  docker-compose.local.yml  docker-compose.prod.yml
patches/: react-zoom-pan-pinch@3.7.0.patch
release/: release-notes.json
scripts/: audit-timer.mjs  generate-board-underlay.mjs  generate-player-piece-palette.mjs  run-vitest-app-tests.mjs  smoke-test-game.mjs  write-docs-index.mjs
server/: runtimeConfig.js  server.js  serverGame.js  stagePolicy.js
sounds/: dice_roll1.opus  dice_roll2.opus
strategy/: balanced.ts  random-strategy.js  strategy.ts
utils/: assert.ts  collections.ts  generateBoard.js
(+1113 files in other folders)
